base.css changes to avoid overlapping text

--- a/mysite/recipes/static/recipes/css/base.css
+++ b/mysite/recipes/static/recipes/css/base.css
@@ -55,12 +55,9 @@ h1 {
 
 #recipe-image-container {
     margin: auto;
-}
-
-#recipe-image-container {
     position: relative;
-    width: 100%;
-    height: 600px;
+    max-width: 100%;
+    height: 300px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: 50% 50%;
@@ -72,17 +69,9 @@ h1 {
     height: 100%;
 }
 
-#recipe-title {
-    position: absolute;
-    bottom: 0;
-    background-color: rgba(66, 244, 75, 0.5);
-    width: 100%;
-}
-
 #recipe-title h1 {
     color: black;
     text-align: center;
-    text-shadow: 2px 2px grey;
 }
 
 #ingredients-container {
